--- a/src/Styles/_general.scss
+++ b/src/Styles/_general.scss
@@ -15,6 +15,19 @@ body {
   background-color: rebeccapurple;
 }
 
+*::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+*::-webkit-scrollbar-track {
+  background: black;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: white;
+  border: 3px solid white;
+}
+
 // font-family: "Bebas Neue";
 // font-family: "Roboto Slab";
 // font-family: "PT Serif";
