--- a/src/Styles/_uihelpers.scss
+++ b/src/Styles/_uihelpers.scss
@@ -5,11 +5,11 @@
 }
 
 #directory-tree-scaler {
-  height: calc(100vh);
+  height: 100vh;
   margin-top: 2rem;
   flex: 0 0 1rem;
   background-color: #fff;
-  margin-left: -0.5rem;
+  margin-left: -0.2rem;
   z-index: 1;
   cursor: ew-resize;
   background: linear-gradient(
@@ -20,5 +20,105 @@
     #00000000 60%,
     #00000000 100%
   );
-  border-radius: 40%;
+  &:hover {
+    background: linear-gradient(
+      90deg,
+      #00000000 0%,
+      #00000000 30%,
+      #fff 35%,
+      #fff 50%,
+      #fff 65%,
+      #00000000 70%,
+      #00000000 100%
+    );
+  }
+}
+
+#custom-title {
+  padding: 4px 1rem 4px 4px;
+  font-size: 0.8rem;
+  color: white;
+  background-color: #000000cc;
+  border-radius: 1px;
+  z-index: 1;
+  position: fixed;
+  line-height: 1.2rem;
+  pointer-events: none;
+  max-width: 40rem;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: break-word;
+  text-decoration: underline;
+  text-decoration-color: white;
+  text-decoration-thickness: 0.5px;
+  text-underline-offset: 3px;
+  width: max-content;
+  backdrop-filter: blur(35px);
+}
+
+#popup-body {
+  width: 30rem;
+  min-height: 10rem;
+  height: max-content;
+  position: fixed;
+  background-color: #111;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 1rem;
+  z-index: 3;
+  transform: translateY(-50%);
+  top: 50%;
+  #close-container {
+    width: 100%;
+    height: 1.5rem;
+    position: relative;
+    button {
+      height: 100%;
+      position: absolute;
+      right: 0;
+      font-weight: bold;
+      background-color: black;
+      color: white;
+      &:hover {
+        outline: 1.2px solid white;
+      }
+    }
+  }
+  #body {
+    max-width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-family: "Bebas neue";
+    font-size: 1.3rem;
+    color: white;
+  }
+  #buttons-container {
+    height: 2rem;
+    width: 100%;
+    #buttons {
+      position: absolute;
+      right: 5%;
+      height: 2rem;
+      display: flex;
+      flex-direction: row;
+      button {
+        background-color: black;
+        color: white;
+        height: 100%;
+        width: 4rem;
+        margin-left: 2rem;
+        font-family: "mukta";
+        line-height: 0.7rem;
+        font-size: 0.7rem;
+        font-weight: bold;
+        &:hover {
+          outline: 1.2px solid white;
+        }
+      }
+    }
+  }
 }
