--- a/src/Styles/_uihelpers.scss
+++ b/src/Styles/_uihelpers.scss
@@ -6,7 +6,7 @@
 
 #directory-tree-scaler {
   height: 100vh;
-  margin-top: 2rem;
+  margin-top: 2.7rem;
   flex: 0 0 1rem;
   background-color: #fff;
   margin-left: -0.2rem;
@@ -36,12 +36,13 @@
 
 #custom-title {
   padding: 4px 1rem 4px 4px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
+  // font-weight: bold;
   color: white;
   background-color: #000000cc;
   border-radius: 1px;
-  z-index: 1;
-  position: fixed;
+  z-index: 3;
+  position: absolute;
   line-height: 1.2rem;
   pointer-events: none;
   max-width: 40rem;
@@ -54,6 +55,8 @@
   text-underline-offset: 3px;
   width: max-content;
   backdrop-filter: blur(35px);
+  letter-spacing: 1px;
+  font-family: "Akshar";
 }
 
 #popup-body {
@@ -87,7 +90,7 @@
     }
   }
   #body {
-    max-width: 90%;
+    width: 95%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -95,6 +98,94 @@
     font-family: "Bebas neue";
     font-size: 1.3rem;
     color: white;
+    padding-bottom: 1rem;
+    #file-comparison {
+      font-size: 0.5rem;
+      font-family: "oswald";
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 100%;
+      height: 30rem;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      padding-right: 1rem;
+      background-color: #555;
+      #left,
+      #right {
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        margin-inline: 1rem;
+        position: relative;
+        .checkbox-name-container {
+          display: flex;
+          flex-direction: row;
+          position: relative;
+          width: 115%;
+          p {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            position: relative;
+            font-size: 0.7rem;
+          }
+        }
+        .block-container {
+          margin-block: 3rem;
+          position: relative;
+          padding-bottom: 0.2rem;
+          max-width: 10rem;
+          height: min-content;
+          min-height: 9rem;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: center;
+          * {
+            font-family: "oswald";
+            pointer-events: none;
+          }
+          input {
+            pointer-events: all;
+          }
+          img {
+            max-width: 100%;
+            max-height: 9rem;
+          }
+          .size {
+            position: absolute;
+            bottom: -1.5rem;
+            left: 50%;
+            transform: translateX(-25%);
+            font-size: 0.65rem;
+          }
+          .date {
+            position: absolute;
+            bottom: -2.35rem;
+            font-size: 0.65rem;
+            left: 1rem;
+            transform: translateX(-5%);
+            width: 100%;
+          }
+          .name {
+            position: absolute;
+            top: -25%;
+            font-size: 1rem;
+            left: 100%;
+            transform: translateX(50%);
+          }
+          .separator {
+            width: 400%;
+            height: 0.5px;
+            background-color: grey;
+            filter: blur(1px);
+            position: absolute;
+            top: -25%;
+          }
+        }
+      }
+    }
   }
   #buttons-container {
     height: 2rem;
