--- a/src/Styles/_navbar.scss
+++ b/src/Styles/_navbar.scss
@@ -5,16 +5,21 @@
   height: 2rem;
   right: 0;
   display: flex;
+  align-items: center;
   flex-direction: row;
   background-color: #101010;
+  z-index: 3;
   button {
     background-color: black;
     color: white;
     margin-left: 2px;
-    margin-top: 0.25rem;
-    height: 1.5rem;
+    height: 80%;
     outline: none;
     border: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     &:hover {
       color: black;
       background-color: #fff;
@@ -34,15 +39,13 @@
     width: 10rem;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    height: 100%;
     button {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
       width: 3rem;
       img {
         pointer-events: none;
-        height: 70%;
+        height: 80%;
       }
       #left-arrow {
         transform: rotate(270deg);
@@ -54,5 +57,34 @@
     }
   }
   #current-directory {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 100%;
+    .arrow-and-name-container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      height: 100%;
+      position: relative;
+    }
+    .sub-directories {
+      position: absolute;
+      width: max-content;
+      bottom: 0;
+      transform: translateY(100%);
+      button {
+        justify-content: start;
+        width: 100%;
+      }
+    }
+    img {
+      height: 50%;
+      background-color: black;
+      padding: 4.5px;
+      &:hover {
+        background-color: white;
+      }
+    }
   }
 }
