--- a/src/Styles/_uihelpers.scss
+++ b/src/Styles/_uihelpers.scss
@@ -37,7 +37,6 @@
 #custom-title {
   padding: 4px 1rem 4px 4px;
   font-size: 0.9rem;
-  // font-weight: bold;
   color: white;
   background-color: #000000cc;
   border-radius: 1px;
@@ -60,7 +59,7 @@
 }
 
 #popup-body {
-  width: 30rem;
+  min-width: 30rem;
   min-height: 10rem;
   height: max-content;
   position: fixed;
@@ -95,93 +94,106 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    font-family: "Bebas neue";
     font-size: 1.3rem;
     color: white;
     padding-bottom: 1rem;
-    #file-comparison {
-      font-size: 0.5rem;
-      font-family: "oswald";
+    font-weight: normal;
+    #description {
+      font-size: 1.5rem;
+      font-weight: normal;
+      font-family: "Oswald";
+    }
+    #select-all {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      align-items: center;
       width: 100%;
-      height: 30rem;
-      overflow-y: scroll;
-      overflow-x: hidden;
-      padding-right: 1rem;
-      background-color: #555;
-      #left,
-      #right {
-        width: 40%;
-        display: flex;
-        flex-direction: column;
-        margin-inline: 1rem;
-        position: relative;
-        .checkbox-name-container {
-          display: flex;
-          flex-direction: row;
-          position: relative;
-          width: 115%;
-          p {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            position: relative;
-            font-size: 0.7rem;
+      background-color: black;
+      height: 4rem;
+      div {
+        margin-inline: auto;
+        * {
+          color: white;
+          font-family: "Akshar";
+          b {
+            color: pink;
           }
         }
-        .block-container {
-          margin-block: 3rem;
+      }
+    }
+    #file-comparison {
+      height: 35rem;
+      width: 38rem;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      padding-top: 1rem;
+      background-color: black;
+      margin-inline: 1rem;
+      padding-bottom: 1rem;
+      .comparison {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        position: relative;
+        padding-top: 3rem;
+        height: 16rem;
+        .horizontal-separator {
+          position: absolute;
+          bottom: 0;
+          width: 95%;
+          height: 0.3px;
+          background-color: #fff;
+          filter: blur(1px);
+        }
+        .name {
+          position: absolute;
+          top: -0.4rem;
+          font-size: 1.2rem;
+          font-family: "Oswald";
+          font-weight: normal;
+        }
+        .size {
+          font-size: 1rem;
+          font-weight: normal;
+          font-family: "Oswald";
+        }
+        .date {
+          font-size: 0.9rem;
+          font-family: "Oswald";
+        }
+        .vertical-separator {
+          height: 16rem;
+          width: 0.3px;
+          background-color: #fff;
+          border-radius: 5rem;
+          filter: blur(1px);
           position: relative;
-          padding-bottom: 0.2rem;
-          max-width: 10rem;
-          height: min-content;
-          min-height: 9rem;
+        }
+        .block-container {
           display: flex;
-          flex-direction: row;
+          flex-direction: column;
           align-items: center;
-          justify-content: center;
+          margin-bottom: 1rem;
+          width: 12rem;
+          height: 14rem;
+          padding: 1rem;
+          position: relative;
+          // background-color: pink;
           * {
-            font-family: "oswald";
             pointer-events: none;
+            margin: 0.1rem;
           }
           input {
+            position: absolute;
+            left: 0;
+            top: 30%;
             pointer-events: all;
           }
           img {
             max-width: 100%;
-            max-height: 9rem;
-          }
-          .size {
-            position: absolute;
-            bottom: -1.5rem;
-            left: 50%;
-            transform: translateX(-25%);
-            font-size: 0.65rem;
-          }
-          .date {
-            position: absolute;
-            bottom: -2.35rem;
-            font-size: 0.65rem;
-            left: 1rem;
-            transform: translateX(-5%);
-            width: 100%;
-          }
-          .name {
-            position: absolute;
-            top: -25%;
-            font-size: 1rem;
-            left: 100%;
-            transform: translateX(50%);
-          }
-          .separator {
-            width: 400%;
-            height: 0.5px;
-            background-color: grey;
-            filter: blur(1px);
-            position: absolute;
-            top: -25%;
+            max-height: 10.8rem;
+            pointer-events: none;
           }
         }
       }
