--- a/src/Styles/_navbar.scss
+++ b/src/Styles/_navbar.scss
@@ -1,3 +1,5 @@
+@import "./general";
+
 #navbar {
   position: fixed;
   top: 0;
@@ -7,46 +9,33 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-  background-color: #101010;
   z-index: 3;
+  &.navbar-dark-mode {
+    background-color: #111;
+  }
+  &.navbar-light-mode {
+    background-color: #fff;
+    border-bottom: 2px solid black;
+  }
   button {
-    background-color: black;
-    color: white;
-    margin-left: 2px;
+    @include Buttons;
+    margin-inline: 2px;
     height: 80%;
-    outline: none;
-    border: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    &:hover {
-      color: black;
-      background-color: #fff;
-    }
-    &:disabled {
-      background-color: #999;
-      color: #555;
-      border: #555;
-      cursor: not-allowed;
-    }
   }
   #toggle-directory-tree {
     width: 6rem;
+    left: 0.2rem;
+    position: relative;
   }
   #navbar-navigation {
-    margin-inline: 1rem;
+    margin-right: 1rem;
+    margin-left: 1.5rem;
     width: 10rem;
     display: flex;
     flex-direction: row;
     align-items: center;
     height: 100%;
     button {
-      width: 3rem;
-      img {
-        pointer-events: none;
-        height: 80%;
-      }
       #left-arrow {
         transform: rotate(270deg);
       }
@@ -67,6 +56,13 @@
       align-items: center;
       height: 100%;
       position: relative;
+      .directory-arrow {
+        width: 1.8rem;
+        img {
+          height: 70%;
+          padding: 4.5px;
+        }
+      }
     }
     .sub-directories {
       position: absolute;
@@ -78,13 +74,14 @@
         width: 100%;
       }
     }
-    img {
-      height: 50%;
-      background-color: black;
-      padding: 4.5px;
-      &:hover {
-        background-color: white;
-      }
-    }
   }
+}
+
+#settings-button {
+  position: fixed;
+  right: 0.5rem;
+  top: 0.2rem;
+  z-index: 3;
+  height: 1.6rem;
+  @include Buttons;
 }
